--- a/questionnaire.html
+++ b/questionnaire.html
@@ -45,13 +45,15 @@
                     </div>
                     <div id="QuestionnaireInput">
                         <form action="" method="get">
-                            <p>姓名* <input id="name" type="text" placeholder="請輸入姓名" required></p>
-                            <p>手機* <input id="phone" type="text" placeholder="請輸入手機" required></p>
-                            <p>Email* <input id="email" type="email" placeholder="請輸入email" required></p>
-                            <p>年齡* <input id="age" type="text" placeholder="請輸入年齡" required></p>
+                            <p>姓名(必填) <input id="name" type="text" placeholder="請輸入姓名" required></p>
+                            <p>手機(必填) <input id="phone" type="text" placeholder="請輸入手機"
+                                    pattern="09\d{2}\-?\d{3}\-?\d{3}" required></p>
+                            <p>Email(必填) <input id="email" type="email" placeholder="請輸入email"
+                                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required></p>
+                            <p>年齡(必填) <input id="age" type="number" placeholder="請輸入年齡" required></p>
                             <div class="col">
                                 <div class="row">
-                                    <p>性別*</p>
+                                    <p>性別(必填)</p>
                                 </div>
                                 <div class="row">
                                     <table>
